refactor user flow tests to include navigation links. test that a user can sign out. add pending tests.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    <%= render "shared/navigation" %>
     <%= render "shared/flash" %>
     <div class="container">
       <%= yield %>
