--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -6,4 +6,13 @@
         <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
         <%= link_to 'My Account', edit_user_registration_path %>
     <% end %>
+</nav>
+<hr/>
 <nav>
+    <% if user_signed_in? %>
+        <%= link_to 'My Notes', notes_path %>
+        <%= link_to 'Create a new note', new_note_path %>
+        <%= link_to 'Deleted Notes', deleted_notes_path %>
+    <% end %>
+</nav>
+<hr/>
