--- a/app/views/notes/deleted.html.erb
+++ b/app/views/notes/deleted.html.erb
@@ -1,6 +1,4 @@
-<h1>Notes#index</h1>
-<p>Find me in app/views/notes/index.html.erb</p>
-<%= render partial: 'search_form' %>
+<p>app/views/notes/deleted.html.erb</p>
 <% unless @notes.empty? %>
     <%= tag.table do %>
         <%= tag.thead do %>
@@ -27,14 +25,9 @@
             <% end %>            
         <% end %>
         <%= tag.body do %>
-            <%= render @notes %>
+            <%= render partial: 'note', collection: @notes %>
         <% end %>
     <% end %>
-    <%= paginate @notes %>
 <% else %>
-    <% unless params[:q] %>
-        <p><%= link_to 'Add your first note', new_note_path %></p>
-    <% else %>
-        <p>Sorry, no notes match your search.</p>
-    <% end %>
+    <p>You have not deleted any of <%= link_to 'your notes', notes_path %></p>
 <% end %>
