--- a/app/views/notes/_previous_verion_link.html.erb
+++ b/app/views/notes/_previous_verion_link.html.erb
@@ -1,1 +1,1 @@
-<%= link_to 'See Previous Versions', note_versions_path(@note) %>
+<%= link_to 'See Previous Versions', note_versions_path(@note) if user_signed_in? && (current_user == @note.user)  %>
