--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |key, value| %>
-    <div class="container">
+    <div class="container" id="flash-message">
         <div class="alert <%= key == 'notice' ? 'alert-primary' : 'alert-danger' %>" role="alert">
             <%= value %>
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
