--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -20,7 +20,7 @@
                 Pinned
             <% end %>                                    
             <%= tag.th do %>
-                Last Update
+                Last Updated
             <% end %>
             <%= tag.th do %>
                 Actions
