--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -1,7 +1,9 @@
 <%= form_with model: object, local: true do |f| %>
     <%= render 'shared/form-errors', object: object %>
+    <%# TODO Replace the input with an H1 on the show, but allow a user to toggle the field %>
     <%= f.label :title %>
     <%= f.text_field :title %>
+    <%# TODO Consider using [SimpleMDE Markdown Editor](https://simplemde.com/) %>
     <%= f.label :body %>
     <%= f.text_area :body %>
     <%= f.label :pinned %>
@@ -9,7 +11,7 @@
     <%= f.label :public %>
     <%= f.check_box :public %>
     <%= f.label :tag_list, 'Tags' %>
-    <%= f.text_field :tag_list, value: f.object.tag_list.join(",") %>
+    <%= f.text_field :tag_list, value: f.object.tag_list.join(","), class: "js-tag-list" %>
     <div>
         <%= f.submit %>
         <%= link_to 'Delete Note', note_path(object), method: :delete, data: { confirm: 'Are you sure?' } if params[:action] == 'edit' %>
