--- a/app/views/reminders/index.html.erb
+++ b/app/views/reminders/index.html.erb
@@ -13,5 +13,5 @@
         <% end %>        
     <% end %>
 <% else %>
-    <p>You have no upcoming reminders. <%= link_at "Add a reminder", new_reminder_path %></p>
+    <p>You have no upcoming reminders. <%= link_to "Add a reminder", new_reminder_path %></p>
 <% end %>
