--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,7 +1,7 @@
 <% flash.each do |key, value| %>
     <div class="container" id="flash-message">
         <div class="alert <%= key == 'notice' ? 'alert-primary' : 'alert-danger' %>" role="alert">
-            <%= value %>
+            <%= value.try(:html_safe) %>
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>            
