--- a/app/views/note_imports/new.html.erb
+++ b/app/views/note_imports/new.html.erb
@@ -1,4 +1,5 @@
 <%= form_with(url: import_notes_path, multipart: true) do %>
-  <%= file_field_tag 'file' %>
-  <%= submit_tag %>
+    <%# TODO Validate that the file is a CSV, and make it required %>
+    <%= file_field_tag 'file' %>
+    <%= submit_tag %>
 <% end %>
