Add import link.

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -13,6 +13,7 @@
         <%= link_to 'My Notes', notes_path %>
         <%= link_to 'Create a new note', new_note_path %>
         <%= link_to 'Deleted Notes', deleted_notes_path %>
+        <%= link_to 'Import Notes', import_notes_path %>
     <% end %>
 </nav>
 <hr/>
