Add basic export functionality.

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -14,6 +14,7 @@
         <%= link_to 'Create a new note', new_note_path %>
         <%= link_to 'Deleted Notes', deleted_notes_path %>
         <%= link_to 'Import Notes', import_notes_path %>
+        <%= link_to 'Export Notes', export_notes_path %>
     <% end %>
 </nav>
 <hr/>
