--- a/app/views/reminders/_form.html.erb
+++ b/app/views/reminders/_form.html.erb
@@ -6,7 +6,7 @@
     <%= f.datetime_local_field :time, disabled: params[:action] == "edit" %>
     <small><%= link_to current_user.time_zone, edit_user_registration_path %></small>
     <%= f.label :body %>
-    <%= f.text_area :body %>
+    <%= f.text_area :body, class: "js-simplemde" %>
     <div>
         <%= f.submit %>
         <%= link_to "Delete Reminder", reminder_path(@reminder), method: :delete, data: { confirm: "Are you sure?" } if params[:action] == "edit" %>
