--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,21 @@
   </head>
 
   <body>
-    <%= render "shared/navigation" %>
-    <%= render "shared/flash" %>
-    <div class="container">
-      <%= yield %>
+    <div>
+      <%= render "shared/flash" %>
+      <%= render "shared/header" %>
+      <main class="-mt-32">
+        <div class="max-w-7xl mx-auto pb-12 px-4 sm:px-6 lg:px-8">
+          <!-- Replace with your content -->
+          <div class="bg-white rounded-lg shadow px-5 py-6 sm:px-6">
+            <div class="border-4 border-dashed border-gray-200 rounded-lg h-96">
+              <%= yield %>
+              <%= debug(params) if Rails.env == 'development' %>
+            </div>
+          </div>
+          <!-- /End replace -->
+        </div>
+      </main>
     </div>
-    <%= debug(params) if Rails.env == 'development' %>
   </body>
 </html>
