--- a/app/views/shared/navigation/_profile_links_desktop.html.erb
+++ b/app/views/shared/navigation/_profile_links_desktop.html.erb
@@ -3,7 +3,7 @@
         <div @click.away="open = false" class="ml-3 relative" x-data="{ open: false }">
             <div>
                 <button @click="open = !open" aria-label="User menu" aria-haspopup="true" x-bind:aria-expanded="open" class="max-w-xs flex items-center text-sm rounded-full text-white focus:outline-none focus:shadow-solid" id="user-menu" aria-label="User menu" aria-haspopup="true">
-                    <img class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" />
+                    <img class="h-8 w-8 rounded-full" src="<%= gravatar_url(current_user.email)%>" />
                 </button>
             </div>
             <div x-show="open" x-description="Profile dropdown panel, show/hide based on dropdown state." x-transition:enter="transition ease-out duration-100" x-transition:enter-start="transform opacity-0 scale-95" x-transition:enter-end="transform opacity-100 scale-100" x-transition:leave="transition ease-in duration-75" x-transition:leave-start="transform opacity-100 scale-100" x-transition:leave-end="transform opacity-0 scale-95"  class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg">
