Build mobile navigation and create more partials.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
 
   <body>
     <div>
-      <%= render "shared/flash" %>
-      <%= render "shared/header" %>
+      <%= render "shared/header/flash" %>
+      <%= render "shared/header/header" %>
       <main class="-mt-32">
         <div class="max-w-7xl mx-auto pb-12 px-4 sm:px-6 lg:px-8">
           <!-- Replace with your content -->
