--- a/app/views/shared/header/_header.html.erb
+++ b/app/views/shared/header/_header.html.erb
@@ -1,4 +1,4 @@
 <div class="bg-gray-800 pb-32">
     <%= render "shared/navigation/navigation" %>
-    <%= render "shared/title" %>
+    <%= render "shared/header/title" %>
 </div>
