--- a/app/views/shared/navigation/_desktop.html.erb
+++ b/app/views/shared/navigation/_desktop.html.erb
@@ -1,22 +1,12 @@
-<div class="flex items-center justify-between h-16 px-4 sm:px-0">
-  <div class="flex items-center">
-    <div class="flex-shrink-0">
-      <span class="text-3xl text-white"><span class="font-hairline">Po</span><span class="font-black">Notes</span>
+<div class="max-w-7xl mx-auto sm:px-6 lg:px-8">
+  <div class="border-b border-gray-700">
+    <div class="flex items-center justify-between h-16 px-4 sm:px-0">
+      <div class="flex items-center">
+        <%= render "shared/navigation/title" %>
+        <%= render "shared/navigation/menu_links_desktop" if current_user %>
+      </div>
+      <%= render "shared/navigation/profile_links_desktop" if current_user %>
+      <%= render "shared/navigation/mobile_button" %>
     </div>
-    <%= render "shared/navigation/menu_links_desktop" if current_user %>
-  </div>
-  <%= render "shared/navigation/profile_links_desktop" if current_user %>
-  <div class="-mr-2 flex md:hidden">
-    <!-- Mobile menu button -->
-    <button class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:bg-gray-700 focus:text-white">
-      <!-- Menu open: "hidden", Menu closed: "block" -->
-      <svg class="block h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-      </svg>
-      <!-- Menu open: "block", Menu closed: "hidden" -->
-      <svg class="hidden h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-      </svg>
-    </button>
   </div>
 </div>
