--- a/app/views/shared/navigation/_mobile.html.erb
+++ b/app/views/shared/navigation/_mobile.html.erb
@@ -1,4 +1,4 @@
-<div class="hidden border-b border-gray-700 md:hidden">
-    <%= render "shared/navigation/links_mobile" if current_user %>
-    <%= render "shared/navigation/user_mobile" if current_user %>
+<div x-description="Mobile menu, toggle classes based on menu state." x-state:on="Open" x-state:off="closed" :class="{ 'block': open, 'hidden': !open }" class="border-b border-gray-700 md:hidden hidden">
+    <%= render "shared/navigation/menu_links_mobile" if current_user %>
+    <%= render "shared/navigation/profile_links_mobile" if current_user %>
 </div>
