--- a/app/views/shared/navigation/_navigation.html.erb
+++ b/app/views/shared/navigation/_navigation.html.erb
@@ -1,48 +1,4 @@
-<nav class="bg-gray-800">
-  <div class="max-w-7xl mx-auto sm:px-6 lg:px-8">
-    <div class="border-b border-gray-700">
-      <%= render "shared/navigation/desktop" %>
-    </div>
-  </div>
-
-  <!--
-    Mobile menu, toggle classes based on menu state.
-
-    Open: "block", closed: "hidden"
-  -->
-  <div class="hidden border-b border-gray-700 md:hidden">
-    <div class="px-2 py-3 sm:px-3">
-      <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-white bg-gray-900 focus:outline-none focus:text-white focus:bg-gray-700">Dashboard
-      </a>
-      <a href="#" class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700">Team
-      </a>
-      <a href="#" class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700">Projects
-      </a>
-      <a href="#" class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700">Calendar
-      </a>
-      <a href="#" class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700">Reports
-      </a>
-    </div>
-    <div class="pt-4 pb-3 border-t border-gray-700">
-      <div class="flex items-center px-5">
-        <div class="flex-shrink-0">
-          <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" />
-        </div>
-        <div class="ml-3">
-          <div class="text-base font-medium leading-none text-white">Tom Cook
-          </div>
-          <div class="mt-1 text-sm font-medium leading-none text-gray-400">tom@example.com
-          </div>
-        </div>
-      </div>
-      <div class="mt-3 px-2" role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
-        <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700" role="menuitem">Your Profile
-        </a>
-        <a href="#" class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700" role="menuitem">Settings
-        </a>
-        <a href="#" class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700" role="menuitem">Sign out
-        </a>
-      </div>
-    </div>
-  </div>
+<nav x-data="{ open: false }" @keydown.window.escape="open = false" class="bg-gray-800">
+  <%= render "shared/navigation/desktop" %>
+  <%= render "shared/navigation/mobile" %>
 </nav>
