--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,30 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>PoNotes</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  </head>
-
+  <%= render "shared/head/head" %>
   <body>
     <div>
       <%= render "shared/header/flash" %>
       <%= render "shared/header/header" %>
       <main class="-mt-32">
         <div class="max-w-7xl mx-auto pb-12 px-4 sm:px-6 lg:px-8">
-          <!-- Replace with your content -->
           <div class="bg-white rounded-lg shadow px-5 py-6 sm:px-6">
-            <div class="border-4 border-dashed border-gray-200 rounded-lg h-96">
               <%= yield %>
-              <%= debug(params) if Rails.env == 'development' %>
-            </div>
+              <%= render "shared/misc/debug" if Rails.env == 'development' %>
           </div>
-          <!-- /End replace -->
         </div>
       </main>
     </div>
