--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -19,9 +19,7 @@
                     <nav class="relative max-w-screen-xl mx-auto flex items-center justify-between px-4 sm:px-6">
                         <div class="flex items-center flex-1">
                             <div class="flex items-center justify-between w-full md:w-auto">
-                                <a href="#" aria-label="Home">
-                                    <img class="h-8 w-auto sm:h-10" src="/img/logos/workflow-mark-on-white.svg" alt="Logo" />
-                                </a>
+                                <span class="text-3xl text-indigo-600"><span class="font-hairline">Po</span><span class="font-black">Notes</span>
                                 <div class="-mr-2 flex items-center md:hidden">
                                     <button
                                         @click="open = true"
@@ -38,22 +36,12 @@
                                     </button>
                                 </div>
                             </div>
-                            <div class="hidden md:block md:ml-10">
-                                <a href="#" class="font-medium text-gray-500 hover:text-gray-900 transition duration-150 ease-in-out">Product </a>
-                                <a href="#" class="ml-10 font-medium text-gray-500 hover:text-gray-900 transition duration-150 ease-in-out">Features </a>
-                                <a href="#" class="ml-10 font-medium text-gray-500 hover:text-gray-900 transition duration-150 ease-in-out">Marketplace </a>
-                                <a href="#" class="ml-10 font-medium text-gray-500 hover:text-gray-900 transition duration-150 ease-in-out">Company </a>
-                            </div>
                         </div>
                         <div class="hidden md:block text-right">
                             <span class="inline-flex rounded-md shadow-md">
                                 <span class="inline-flex rounded-md shadow-xs">
-                                    <a
-                                        href="#"
-                                        class="inline-flex items-center px-4 py-2 border border-transparent text-base leading-6 font-medium rounded-md text-indigo-600 bg-white hover:bg-gray-50 focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo transition duration-150 ease-in-out"
-                                    >
-                                        Log in
-                                    </a>
+                                    <%= link_to "Log In", new_user_session_path, class: "inline-flex items-center px-4 py-2 border border-transparent text-base leading-6 font-medium rounded-md text-indigo-600 bg-white hover:bg-gray-50
+                                    focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo transition duration-150 ease-in-out"%>
                                 </span>
                             </span>
                         </div>
@@ -90,44 +78,9 @@
                                         </button>
                                     </div>
                                 </div>
-                                <div class="px-2 pt-2 pb-3">
-                                    <a
-                                        href="#"
-                                        class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50 focus:outline-none focus:text-gray-900 focus:bg-gray-50 transition duration-150 ease-in-out"
-                                        role="menuitem"
-                                    >
-                                        Product
-                                    </a>
-                                    <a
-                                        href="#"
-                                        class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50 focus:outline-none focus:text-gray-900 focus:bg-gray-50 transition duration-150 ease-in-out"
-                                        role="menuitem"
-                                    >
-                                        Features
-                                    </a>
-                                    <a
-                                        href="#"
-                                        class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50 focus:outline-none focus:text-gray-900 focus:bg-gray-50 transition duration-150 ease-in-out"
-                                        role="menuitem"
-                                    >
-                                        Marketplace
-                                    </a>
-                                    <a
-                                        href="#"
-                                        class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50 focus:outline-none focus:text-gray-900 focus:bg-gray-50 transition duration-150 ease-in-out"
-                                        role="menuitem"
-                                    >
-                                        Company
-                                    </a>
-                                </div>
                                 <div>
-                                    <a
-                                        href="#"
-                                        class="block w-full px-5 py-3 text-center font-medium text-indigo-600 bg-gray-50 hover:bg-gray-100 hover:text-indigo-700 focus:outline-none focus:bg-gray-100 focus:text-indigo-700 transition duration-150 ease-in-out"
-                                        role="menuitem"
-                                    >
-                                        Log in
-                                    </a>
+                                    <%= link_to "Log In", new_user_session_path, class: "block w-full px-5 py-3 text-center font-medium text-indigo-600 bg-gray-50 hover:bg-gray-100 hover:text-indigo-700 focus:outline-none focus:bg-gray-100
+                                    focus:text-indigo-700 transition duration-150 ease-in-out", role: :menuitem %>
                                 </div>
                             </div>
                         </div>
@@ -136,9 +89,6 @@
                     <main class="mt-8 mx-auto max-w-screen-xl px-4 sm:mt-12 sm:px-6 md:mt-20 xl:mt-24">
                         <div class="lg:grid lg:grid-cols-12 lg:gap-8">
                             <div class="sm:text-center md:max-w-2xl md:mx-auto lg:col-span-6 lg:text-left">
-                                <div class="text-sm font-semibold uppercase tracking-wide text-gray-500 sm:text-base lg:text-sm xl:text-base">
-                                    Coming soon
-                                </div>
                                 <h2 class="mt-1 text-4xl tracking-tight leading-10 font-extrabold text-gray-900 sm:leading-none sm:text-6xl lg:text-5xl xl:text-6xl">
                                     Data to enrich your
                                     <br class="hidden md:inline" />
@@ -147,27 +97,13 @@
                                 <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-xl lg:text-lg xl:text-xl">
                                     Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua ad ad non deserunt sunt.
                                 </p>
-                                <div class="mt-5 sm:max-w-lg sm:mx-auto sm:text-center lg:text-left lg:mx-0">
-                                    <p class="text-base font-medium text-gray-900">
-                                        Sign up to get notified when it’s ready.
-                                    </p>
-                                    <form action="#" method="POST" class="mt-3 sm:flex">
-                                        <input
-                                            aria-label="Email"
-                                            class="appearance-none block w-full px-3 py-3 border border-gray-300 text-base leading-6 rounded-md placeholder-gray-500 shadow-sm focus:outline-none focus:placeholder-gray-400 focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:flex-1"
-                                            placeholder="Enter your email"
-                                        />
-                                        <button
-                                            type="submit"
-                                            class="mt-3 w-full px-6 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-gray-800 shadow-sm hover:bg-gray-700 focus:outline-none focus:border-gray-900 focus:shadow-outline-gray active:bg-gray-900 transition duration-150 ease-in-out sm:mt-0 sm:ml-3 sm:flex-shrink-0 sm:inline-flex sm:items-center sm:w-auto"
-                                        >
-                                            Notify me
-                                        </button>
-                                    </form>
-                                    <p class="mt-3 text-sm leading-5 text-gray-500">
-                                        We care about the protection of your data. Read our
-                                        <a href="#" class="font-medium text-gray-900 underline">Privacy Policy </a>.
-                                    </p>
+                                <div class="mt-5  sm:flex sm:justify-center lg:justify-start md:mt-8">
+                                    <div class="rounded-md shadow">
+                                        <%= link_to "Create and Account", new_user_registration_path, class: "w-full flex items-center justify-center px-8 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10" %>
+                                    </div>
+                                    <div class="mt-3 rounded-md shadow sm:mt-0 sm:ml-3">
+                                        <%= link_to "Sign In", new_user_session_path, class: "w-full flex items-center justify-center px-8 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-indigo-600 bg-white hover:text-indigo-500 focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10" %>
+                                    </div>
                                 </div>
                             </div>
                             <div class="mt-12 relative sm:max-w-lg sm:mx-auto lg:mt-0 lg:max-w-none lg:mx-0 lg:col-span-6 lg:flex lg:items-center">
