Add missing closing tag.

--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -19,7 +19,7 @@
                     <nav class="relative max-w-screen-xl mx-auto flex items-center justify-between px-4 sm:px-6">
                         <div class="flex items-center flex-1">
                             <div class="flex items-center justify-between w-full md:w-auto">
-                                <span class="text-3xl text-indigo-600"><span class="font-hairline">Po</span><span class="font-black">Notes</span>
+                                <span class="text-3xl text-indigo-600"><span class="font-hairline">Po</span><span class="font-black">Notes</span></span>
                                 <div class="-mr-2 flex items-center md:hidden">
                                     <button
                                         @click="open = true"
