--- a/app/views/shared/navigation/_title.html.erb
+++ b/app/views/shared/navigation/_title.html.erb
@@ -1,3 +1,3 @@
 <div class="flex-shrink-0">
-    <span class="text-3xl text-white"><span class="font-hairline">Po</span><span class="font-black">Notes</span>
+    <span class="text-3xl text-white"><span class="font-hairline">Po</span><span class="font-black">Notes</span></span>
 </div>
