Add logo to mobile nav on landing page.

--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -62,9 +62,7 @@
                         <div class="rounded-lg shadow-md">
                             <div class="rounded-lg bg-white shadow-xs overflow-hidden" role="menu" aria-orientation="vertical" aria-labelledby="main-menu">
                                 <div class="px-5 pt-4 flex items-center justify-between">
-                                    <div>
-                                        <img class="h-8 w-auto" src="/img/logos/workflow-mark-on-white.svg" alt="" />
-                                    </div>
+                                    <span class="text-3xl text-indigo-600"><span class="font-hairline">Po</span><span class="font-black">Notes</span></span>
                                     <div class="-mr-2">
                                         <button
                                             @click="open = false"
