--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -16,118 +16,12 @@
                     </svg>
                 </div>
                 <div x-data="{ open: false }" class="relative pt-6 pb-16 md:pb-20 lg:pb-24 xl:pb-32">
-                    <nav class="relative max-w-screen-xl mx-auto flex items-center justify-between px-4 sm:px-6">
-                        <div class="flex items-center flex-1">
-                            <div class="flex items-center justify-between w-full md:w-auto">
-                                <span class="text-3xl text-indigo-600"><span class="font-hairline">Po</span><span class="font-black">Notes</span></span>
-                                <div class="-mr-2 flex items-center md:hidden">
-                                    <button
-                                        @click="open = true"
-                                        type="button"
-                                        class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out"
-                                        id="main-menu"
-                                        aria-label="Main menu"
-                                        aria-haspopup="true"
-                                        x-bind:aria-expanded="open"
-                                    >
-                                        <svg class="h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-                                        </svg>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="hidden md:block text-right">
-                            <span class="inline-flex rounded-md shadow-md">
-                                <span class="inline-flex rounded-md shadow-xs">
-                                    <%= link_to "Log In", new_user_session_path, class: "inline-flex items-center px-4 py-2 border border-transparent text-base leading-6 font-medium rounded-md text-indigo-600 bg-white hover:bg-gray-50
-                                    focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo transition duration-150 ease-in-out"%>
-                                </span>
-                            </span>
-                        </div>
-                    </nav>
-
-                    <div
-                        x-show="open"
-                        x-description="Mobile menu, show/hide based on menu open state."
-                        x-transition:enter="duration-150 ease-out"
-                        x-transition:enter-start="opacity-0 scale-95"
-                        x-transition:enter-end="opacity-100 scale-100"
-                        x-transition:leave="duration-100 ease-in"
-                        x-transition:leave-start="opacity-100 scale-100"
-                        x-transition:leave-end="opacity-0 scale-95"
-                        class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden"
-                        style="display: none;"
-                    >
-                        <div class="rounded-lg shadow-md">
-                            <div class="rounded-lg bg-white shadow-xs overflow-hidden" role="menu" aria-orientation="vertical" aria-labelledby="main-menu">
-                                <div class="px-5 pt-4 flex items-center justify-between">
-                                    <span class="text-3xl text-indigo-600"><span class="font-hairline">Po</span><span class="font-black">Notes</span></span>
-                                    <div class="-mr-2">
-                                        <button
-                                            @click="open = false"
-                                            type="button"
-                                            class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out"
-                                            aria-label="Close menu"
-                                        >
-                                            <svg class="h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
-                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-                                            </svg>
-                                        </button>
-                                    </div>
-                                </div>
-                                <div>
-                                    <%= link_to "Log In", new_user_session_path, class: "block w-full px-5 py-3 text-center font-medium text-indigo-600 bg-gray-50 hover:bg-gray-100 hover:text-indigo-700 focus:outline-none focus:bg-gray-100
-                                    focus:text-indigo-700 transition duration-150 ease-in-out", role: :menuitem %>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
+                    <%= render "shared/hero/navigation.html.erb"%>
+                    <%= render "shared/hero/mobile_navigation.html.erb"%>
                     <main class="mt-8 mx-auto max-w-screen-xl px-4 sm:mt-12 sm:px-6 md:mt-20 xl:mt-24">
                         <div class="lg:grid lg:grid-cols-12 lg:gap-8">
-                            <div class="sm:text-center md:max-w-2xl md:mx-auto lg:col-span-6 lg:text-left">
-                                <h2 class="mt-1 text-4xl tracking-tight leading-10 font-extrabold text-gray-900 sm:leading-none sm:text-6xl lg:text-5xl xl:text-6xl">
-                                    Data to enrich your
-                                    <br class="hidden md:inline" />
-                                    <span class="text-indigo-600">online business </span>
-                                </h2>
-                                <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-xl lg:text-lg xl:text-xl">
-                                    Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua ad ad non deserunt sunt.
-                                </p>
-                                <div class="mt-5  sm:flex sm:justify-center lg:justify-start md:mt-8">
-                                    <div class="rounded-md shadow">
-                                        <%= link_to "Create and Account", new_user_registration_path, class: "w-full flex items-center justify-center px-8 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10" %>
-                                    </div>
-                                    <div class="mt-3 rounded-md shadow sm:mt-0 sm:ml-3">
-                                        <%= link_to "Sign In", new_user_session_path, class: "w-full flex items-center justify-center px-8 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-indigo-600 bg-white hover:text-indigo-500 focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10" %>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="mt-12 relative sm:max-w-lg sm:mx-auto lg:mt-0 lg:max-w-none lg:mx-0 lg:col-span-6 lg:flex lg:items-center">
-                                <svg class="absolute top-0 left-1/2 transform -translate-x-1/2 -translate-y-8 scale-75 origin-top sm:scale-100 lg:hidden" width="640" height="784" fill="none" viewBox="0 0 640 784">
-                                    <defs>
-                                        <pattern id="4f4f415c-a0e9-44c2-9601-6ded5a34a13e" x="118" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
-                                            <rect x="0" y="0" width="4" height="4" class="text-gray-200" fill="currentColor"></rect>
-                                        </pattern>
-                                    </defs>
-                                    <rect y="72" width="640" height="640" class="text-gray-50" fill="currentColor"></rect>
-                                    <rect x="118" width="404" height="784" fill="url(#4f4f415c-a0e9-44c2-9601-6ded5a34a13e)"></rect>
-                                </svg>
-                                <div class="relative mx-auto w-full rounded-lg shadow-lg lg:max-w-md">
-                                    <button type="button" class="relative block w-full rounded-lg overflow-hidden focus:outline-none focus:shadow-outline">
-                                        <img class="w-full" src="https://images.unsplash.com/photo-1556740758-90de374c12ad?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1350&amp;q=80" alt="Woman making a sale" />
-                                        <div class="absolute inset-0 w-full h-full flex items-center justify-center">
-                                            <svg class="h-20 w-20 text-indigo-500" fill="currentColor" viewBox="0 0 84 84">
-                                                <circle opacity="0.9" cx="42" cy="42" r="42" fill="white"></circle>
-                                                <path
-                                                    d="M55.5039 40.3359L37.1094 28.0729C35.7803 27.1869 34 28.1396 34 29.737V54.263C34 55.8604 35.7803 56.8131 37.1094 55.9271L55.5038 43.6641C56.6913 42.8725 56.6913 41.1275 55.5039 40.3359Z"
-                                                ></path>
-                                            </svg>
-                                        </div>
-                                    </button>
-                                </div>
-                            </div>
+                            <%= render "shared/hero/main_content" %>
+                            <%= render "shared/hero/video" %>
                         </div>
                     </main>
                 </div>
