--- a/app/views/shared/misc/_debug.html.erb
+++ b/app/views/shared/misc/_debug.html.erb
@@ -1,3 +1,3 @@
-<div class="bg-gray-300 rounded-lg my-5 px-5 py-6 sm:px-6">
+<div class="bg-gray-300 rounded-lg my-5 px-5 py-6 sm:px-6 w-full">
     <code><%= debug(params) %></code>
 <div>
