Create title partial.

--- a/app/views/shared/hero/_mobile_navigation.html.erb
+++ b/app/views/shared/hero/_mobile_navigation.html.erb
@@ -13,7 +13,7 @@
     <div class="rounded-lg shadow-md">
         <div class="rounded-lg bg-white shadow-xs overflow-hidden" role="menu" aria-orientation="vertical" aria-labelledby="main-menu">
             <div class="px-5 pt-4 flex items-center justify-between">
-                <span class="text-3xl text-indigo-600"><span class="font-hairline">Po</span><span class="font-black">Notes</span></span>
+                <%= render "shared/title/purple" %>
                 <div class="-mr-2">
                     <button
                         @click="open = false"
