--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,39 +1,42 @@
-<h2 class="mt-6 text-center text-3xl leading-9 font-extrabold text-gray-900">Sign up</h2>
+<% content_for :form_title do "Sign up" end%>
+<% content_for :form_content do %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="field">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="field">
+      <%= f.label :time_zone %><br />
+      <%= f.time_zone_select(:time_zone) %>
+    </div>
 
-  <div class="field">
-    <%= f.label :time_zone %><br />
-    <%= f.time_zone_select(:time_zone) %>
-  </div>
+    <div class="field">
+      <%= f.label :telephone %><br />
+      <%= f.telephone_field :telephone %>
+    </div>   
 
-  <div class="field">
-    <%= f.label :telephone %><br />
-    <%= f.telephone_field :telephone %>
-  </div>   
+    <div class="field">
+      <%= f.label :password %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "new-password" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <div class="field">
+      <%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="actions">
+      <%= f.submit "Sign up" %>
+    </div>
+  <% end %>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+  <%= render "users/shared/links" %>
 <% end %>
 
-<%= render "users/shared/links" %>
+<%= render "users/shared/form_content" %>
