Add flash message to landing page. Make flash message blue.

--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -2,6 +2,7 @@
 <html>
     <%= render "shared/head/head" %>
     <body class="antialiased font-sans bg-gray-200">
+        <%= render "shared/header/flash" %>
         <div class="" style="">
             <div class="relative bg-black overflow-hidden">
                 <%= render partial: "shared/hero/shapes" %>
