Style mobile menus.

--- a/app/views/shared/navigation/_menu_links_mobile.html.erb
+++ b/app/views/shared/navigation/_menu_links_mobile.html.erb
@@ -1,5 +1,5 @@
 <div class="px-2 py-3 sm:px-3">
-    <%= link_to "Notes", notes_path, class: "block px-3 py-2 rounded-md text-base font-medium text-white bg-gray-900 focus:outline-none focus:text-white focus:bg-gray-700" %>
-    <%= link_to "Tasks", tasks_path, class: "mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700" %>
-    <%= link_to "Reminders", reminders_path, class: "mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700" %>    
+    <%= link_to "Notes", notes_path, class: "block px-3 py-2 text-base font-medium text-white border border-white focus:outline-none focus:text-white focus:bg-gray-900" %>
+    <%= link_to "Tasks", tasks_path, class: "mt-1 block px-3 py-2 text-base font-medium text-white border border-transparent hover:text-black hover:bg-white focus:outline-none focus:text-black focus:bg-white focus:border-white" %>
+    <%= link_to "Reminders", reminders_path, class: "mt-1 block px-3 py-2 text-base font-medium text-white border border-transparent hover:text-black hover:bg-white focus:outline-none focus:text-black focus:bg-white focus:border-white" %>    
 </div>
