--- a/app/views/shared/navigation/_mobile_button.html.erb
+++ b/app/views/shared/navigation/_mobile_button.html.erb
@@ -1,5 +1,5 @@
 <div class="-mr-2 flex md:hidden">
-    <button @click="open = !open" class="inline-flex items-center justify-center p-2 text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:bg-gray-700 focus:text-white" x-bind:aria-label="open ? 'Close main menu' : 'Main menu'" x-bind:aria-expanded="open" aria-label="Main menu">
+    <button @click="open = !open" class="inline-flex items-center justify-center p-2 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 focus:text-white" x-bind:aria-label="open ? 'Close main menu' : 'Main menu'" x-bind:aria-expanded="open" aria-label="Main menu">
         <svg x-state:on="Menu open" x-state:off="Menu closed" :class="{ 'hidden': open, 'block': !open }" class="h-6 w-6 block" stroke="currentColor" fill="none" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
         </svg>
