--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -16,35 +16,43 @@
     <%= markdown note.body %>
 <% else %>
     <%= tag.tr do %>
-        <%= tag.td do %>
+        <%= tag.td class: "px-6 py-4 whitespace-no-wrap border-b border-gray-200 text-sm leading-5 font-medium text-gray-900" do %>
             <%= note.try(:reify) ? note.reify.title : note.title %>
         <% end %>
         <%# TODO Format preview text. %>
-        <%= tag.td do %>
+        <%= tag.td class: "px-6 py-4 whitespace-no-wrap border-b border-gray-200 text-sm leading-5 text-gray-500" do %>
             <%= note.try(:reify) ? note.reify.body.truncate_words(10) : note.body.truncate_words(10) %>
         <% end %>
-        <%= tag.td do %>
-            <%= note.try(:reify) ? note.reify.tag_list : note.tag_list %>
+        <%= tag.td class: "px-6 py-4 whitespace-no-wrap border-b border-gray-200 text-sm leading-5 text-gray-500" do %>
+            <%= note.try(:reify) ? note.reify.tag_list : note.tag_list %>   
         <% end %>
-        <%= tag.td do %>
-            <%= note.try(:reify) ? note.reify.public : note.public %>
+        <%= tag.td class: "px-6 py-4 whitespace-no-wrap border-b border-gray-200 text-sm leading-5 text-gray-500" do %>
+            <% if note.try(:reify) %>
+                <%= render partial: "shared/icons/checked", locals: { checked: note.reify.public } %>
+            <% else %>
+                <%= render partial: "shared/icons/checked", locals: { checked: note.public } %>
+            <% end %>
         <% end %>
-        <%= tag.td do %>
-            <%= note.try(:reify) ? note.reify.pinned : note.pinned %>
+        <%= tag.td class: "px-6 py-4 whitespace-no-wrap border-b border-gray-200 text-sm leading-5 text-gray-500" do %>
+            <% if note.try(:reify) %>
+                <%= render partial: "shared/icons/checked", locals: { checked: note.reify.pinned } %>
+            <% else %>
+                <%= render partial: "shared/icons/checked", locals: { checked: note.pinned } %>
+            <% end %>
         <% end %>
-        <%= tag.td do %>
+        <%= tag.td class: "px-6 py-4 whitespace-no-wrap border-b border-gray-200 text-sm leading-5 text-gray-500" do %>
             <%= note.try(:reify) ? "#{time_ago_in_words(note.reify.updated_at)} ago" : "#{time_ago_in_words(note.updated_at)} ago" %>
         <% end %>      
-        <%= tag.td do %>
+        <%= tag.td class: "px-6 py-4 whitespace-no-wrap border-b border-gray-200 text-sm leading-5 text-gray-500" do %>
             <% if params[:action] == "index" %>
-                <%= link_to 'Edit', edit_note_path(note) %>
-                <%= link_to 'Preview', note_path(note)  %>
+                <%= link_to 'Edit', edit_note_path(note), class: "text-blue-500 hover:text-blue-600 focus:outline-none focus:text-blue-900" %>
+                <%= link_to 'Preview', note_path(note), class: "text-blue-500 hover:text-blue-600 focus:outline-none focus:text-blue-900" %>
             <% end %>
             <% if params[:action] == "versions" %>
-                <%= link_to 'Preview', version_note_path(@note, note) %>
+                <%= link_to 'Preview', version_note_path(@note, note), class: "text-blue-500 hover:text-blue-600 focus:outline-none focus:text-blue-900" %>
             <% end %>
             <% if params[:action] == "deleted" %>
-                <%= link_to 'Restore Note', restore_note_path(note.id), method: :post %>
+                <%= link_to 'Restore Note', restore_note_path(note.id), method: :post, class: "text-blue-500 hover:text-blue-600 focus:outline-none focus:text-blue-900" %>
             <% end %>
         <% end %>                        
     <% end %>
