--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -6,8 +6,7 @@
             <%= render layout: "shared/tables/th" do "Title" end %>
             <%= render layout: "shared/tables/th" do "Preview" end %>
             <%= render layout: "shared/tables/th" do "Tags" end %>
-            <%= render layout: "shared/tables/th" do "Public" end %>
-            <%= render layout: "shared/tables/th" do "Pinned" end %>
+            <%= render layout: "shared/tables/th" do "Status" end %>
             <%= render layout: "shared/tables/th" do "Last Updated" end %>
         <% end %>
         <%= render layout: "shared/tables/tbody" do %>
