Link title to root_path

--- a/app/views/shared/navigation/_title.html.erb
+++ b/app/views/shared/navigation/_title.html.erb
@@ -1,3 +1,5 @@
 <div class="flex-shrink-0">
-    <span class="text-3xl text-white"><span class="font-hairline">Po</span><span class="font-black">Notes</span></span>
+    <%= link_to root_path do %>
+        <span class="text-3xl text-white"><span class="font-hairline">Po</span><span class="font-black">Notes</span></span>
+    <% end %>
 </div>
