Refactor mobile menu styles and markup.

--- a/app/views/shared/navigation/_mobile_button.html.erb
+++ b/app/views/shared/navigation/_mobile_button.html.erb
@@ -1,10 +1,15 @@
 <div class="-mr-2 flex md:hidden">
-    <button @click="open = !open" class="inline-flex items-center justify-center p-2 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 focus:text-white" x-bind:aria-label="open ? 'Close main menu' : 'Main menu'" x-bind:aria-expanded="open" aria-label="Main menu">
-        <svg x-state:on="Menu open" x-state:off="Menu closed" :class="{ 'hidden': open, 'block': !open }" class="h-6 w-6 block" stroke="currentColor" fill="none" viewBox="0 0 24 24">
+    <button
+        @click="open = true"
+        type="button"
+        class="inline-flex items-center justify-center p-2 text-white hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out"
+        id="main-menu"
+        aria-label="Main menu"
+        aria-haspopup="true"
+        x-bind:aria-expanded="open"
+    >
+        <svg class="h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-        </svg>
-        <svg x-state:on="Menu open" x-state:off="Menu closed" :class="{ 'hidden': !open, 'block': open }" class="h-6 w-6 hidden" stroke="currentColor" fill="none" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
         </svg>
     </button>
 </div>
