Make link block level.

--- a/app/views/shared/navigation/_title.html.erb
+++ b/app/views/shared/navigation/_title.html.erb
@@ -1,5 +1,5 @@
 <div class="flex-shrink-0">
-    <%= link_to root_path do %>
+    <%= link_to root_path, class: "block" do %>
         <span class="text-3xl text-white"><span class="font-hairline">Po</span><span class="font-black">Notes</span></span>
     <% end %>
 </div>
