--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -1,3 +1,2 @@
-<h1>Notes#new</h1>
-<p>Find me in app/views/notes/new.html.erb</p>
+<%= content_for :title do "Create a New Note" end %>
 <%= render partial: "form", locals: { object: @note } %>
