--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -1,4 +1,5 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "./components/forms";
+@import "./components/simplemde";
 @import "tailwindcss/utilities";
