--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,5 +1,4 @@
-<h1>Notes#edit</h1>
-<p>Find me in app/views/notes/edit.html.erb</p>
+<%= content_for :title do "Edit Note" end %>
 <%= render partial: 'share_link' %>
 <%= render partial: 'previous_verion_link' %>
 <%= link_to 'View Note', note_path(@note), data: { confirm: 'Make sure to save your changes.' } if policy(@note).show? %>
