Begin to style form buttons.

--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -2,4 +2,5 @@
 @import "tailwindcss/components";
 @import "./components/forms";
 @import "./components/simplemde";
+@import "./components/button";
 @import "tailwindcss/utilities";
