--- a/app/views/notes/_share_link.html.erb
+++ b/app/views/notes/_share_link.html.erb
@@ -1,5 +1,10 @@
 <% if @note.public? %>
-    <button class="js-copy-to-clipboard" data-clipboard-target="#js-clipboard-source">Copy to clipboard.</button>
-    <label for="js-clipboard-source">Share Link</label>
-    <input type="text" readonly value="<%= request.base_url + note_path(@note) %>" id="js-clipboard-source" />
+    <div class="flex items-center">
+        <button class="js-copy-to-clipboard btn-sm btn-green flex items-center leading-tight h-8" data-clipboard-target="#js-clipboard-source">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="fill-current h-4 mr-2"><path d="M4 10c0-1.1.9-2 2-2h8c1.1 0 2 .9 2 2v8c0 1.1-.9 2-2 2H6c-1.1 0-2-.9-2-2v-8zm2 0v8h8v-8h-2V8H8v2H6zm3-6.17V16h2V3.83l3.07 3.07 1.42-1.41L10 0l-.7.7-4.8 4.8 1.42 1.4L9 3.84z"/></svg>
+            <span>Share Link</span>
+        </button>
+        <label for="js-clipboard-source" class="sr-only">Share Link</label>
+        <input type="text" readonly value="<%= request.base_url + note_path(@note) %>" id="js-clipboard-source" class="input w-auto h-8 text-sm text-gray-500 border-l-transparent" />
+    </div>
 <% end %>
