Place action links below title.

--- a/app/views/shared/header/_title.html.erb
+++ b/app/views/shared/header/_title.html.erb
@@ -3,5 +3,6 @@
         <h1 class="text-3xl leading-9 font-bold text-white">
             <%= yield :title %>
         </h1>
+        <%= render "shared/header/page_links" %>
     </div>
 </header>
