--- a/app/views/notes/_previous_verion_link.html.erb
+++ b/app/views/notes/_previous_verion_link.html.erb
@@ -1,1 +1,3 @@
-<%= link_to 'See Previous Versions', versions_note_path(@note) if user_signed_in? && (current_user == @note.user)  %>
+<%= link_to versions_note_path(@note), class: "text-white border border-white flex items-center px-2 py-1 text-sm focus:outline-none focus:bg-white focus:text-black hover:bg-white hover:text-black" do %>
+    See Previous Versions
+<% end if user_signed_in? && (current_user == @note.user) %>
