--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,6 +1,12 @@
-<h1>Notes#show</h1>
-<p>Find me in app/views/notes/show.html.erb</p>
+<%= content_for :title do @note.title end %>
+<%= content_for :page_links do %>
+    <div class="flex mt-3">
+        <%= link_to edit_note_path(@note), class: "text-white border border-white border-r-0 flex items-center px-2 py-1 text-sm focus:outline-none focus:bg-white focus:text-black hover:bg-white hover:text-black" do %>
+            Edit Note
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="fill-current h-3 ml-2"><path d="M12.3 3.7l4 4L4 20H0v-4L12.3 3.7zm1.4-1.4L16 0l4 4-2.3 2.3-4-4z"/></svg>
+        <% end if policy(@note).update? %>
+        <%= render partial: 'previous_verion_link' %>
+    </div>
+<% end %>
 <%= render partial: 'share_link' %>
-<%= render partial: 'previous_verion_link' %>
-<%= link_to 'Edit Note', edit_note_path(@note) if policy(@note).update? %>
 <%= render partial: 'note', object: @note, locals: { display: 'individual' } %>
